# napari-travali

./: .cookiecutter.json  .gitignore  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt  test.db
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
examples/: .gitignore  cell_seg_demo.ipynb  cell_seg_demo.py  create_cell_seg_dataset.ipynb  image.npy  large_image.ipynb  open_edit_segmentation_file.ipynb  open_large_data.py  original_labels.npy  original_split_dict.json  prefmon.json  stateful_napari_widget.ipynb  test.db  test.json  try_large_data.ipynb  try_tracksdata.ipynb
examples/old/: labels.db  open_edit_segmentation_file.ipynb  original_split_dict.json  stateful_napari_widget.ipynb
examples/profiling_results/: .gitignore
src/: conftest.py
src/napari_travali2/: __init__.py  __main__.py  _consts.py  _gui_utils.py  _logging.py  _stateful_widget.py  _track_utils.py  _transitions.py
src/napari_travali2/_tests/: test_track_utils.py
src/napari_travali2/actionable_tracks/: action.py  actionable_tracks.py  utils.py
src/napari_travali2/actionable_tracks/_tests/: test_actionable_tracks.py
src/napari_travali2/old/: _viewer.py  _viewer_model.py
tests/: __init__.py  test_actionable_tracks.py  test_main.py
