[tool.poetry]
name = "napari-travali"
version = "0.0.0"
description = "Napari Travali"
authors = ["Yohsuke T. Fukai <ysk@yfukai.net>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/yfukai/napari-travali"
repository = "https://github.com/yfukai/napari-travali"
documentation = "https://napari-travali.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/yfukai/napari-travali/releases"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.0.1"
zarr = "^2.10.3"
numpy = "^1.22.1"
pandas = "^1.4.0"
dask = "^2022.1.1"
napari = "^0.4.13"
tqdm = "^4.62.3"
QtPy = "^2.0.0"
transitions = "^0.8.10"
networkx = "^2.6.3"
PySide2 = "^5.15.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
coverage = {extras = ["toml"], version = "^6.1"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.5"}
sphinx = "^4.1.1"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.0"
darglint = "^1.8.0"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^0.5.2"
sphinx-click = "^3.0.1"
Pygments = "^2.9.0"

[tool.poetry.scripts]
napari-travali = "napari_travali.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["napari_travali"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"
